force-app/main/default/objects/ProposalSetting__mdt/ProposalSetting__mdt.object-meta.xml
<CustomObject>
    <label>ProposalSetting</label>
    <pluralLabel>ProposalSettings</pluralLabel>
</CustomObject>