force-app/main/default/objects/ProposalSetting__mdt/fields/Setting_Type__c.field-meta.xml
<CustomField>
    <fullName>Setting_Type__c</fullName>
    <label>Setting Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ComparisonAnalysisDefaultMapping</fullName>
                <default>true</default>
                <label>ComparisonAnalysisDefaultMapping</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>