force-app/main/default/objects/ProposalSetting__mdt/fields/Value_1__c.field-meta.xml
<CustomField>
    <fullName>Value_1__c</fullName>
    <label>Value 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>